--- a/style.css
+++ b/style.css
@@ -354,3 +354,30 @@ section {
     right: 15px;
 }
 
+.travel {
+    background: url(assets/img/bg3.png);
+    background-size: cover;
+}
+
+.slider {
+    max-width: 460px;
+    margin: 40px auto 0px;
+}
+
+.carousel-control-prev img {
+    transform: rotate(90deg);
+}
+
+.carousel-control-prev {
+    width: 150px;
+    height: 28px;
+}
+
+.carousel-control-next img{
+    transform: rotate(-90deg);
+}
+
+.carousel-control-next {
+    width: 150px;
+    height: 28px;
+}
