--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ section {
 }
 
 .slider {
-    max-width: 460px;
+    max-width: 660px;
     margin: 40px auto 0px;
 }
 
@@ -371,6 +371,8 @@ section {
 .carousel-control-prev {
     width: 150px;
     height: 28px;
+    left: -25%;
+    top: 50%;
 }
 
 .carousel-control-next img{
@@ -380,4 +382,62 @@ section {
 .carousel-control-next {
     width: 150px;
     height: 28px;
+    right: -25%;
+    top: 50%;
+}
+
+.carousel-item .clr-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
+.baw {
+    position: relative;
+    opacity: 1;
+    z-index: 2;
+    transition: .2s;
+
+    filter: grayscale(100%);
+}
+
+.slider:hover .baw {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.accordion {
+    margin-top: 50px;
+}
+
+.faq-link {
+    text-align: center;
+    display: block;
+    padding: 30px;
+    color: #313131 !important;
+
+    font-size: 28px;
+    font-family: 'Motserrat-SemiBold', sans-serif;
+}
+
+.faq-link:hover {
+    opacity: .7;
+}
+
+.card {
+    border: none;
+    border-radius: 0;
+    border-bottom: 2px solid #ffe400 !important;
+}
+
+.card:first-child {
+    border-top: 2px solid #ffe400;
+}
+
+.card-header {
+    margin-bottom: 0;
+    background-color: #ffffff;
+    border-bottom: none;
+    padding: 0;
 }
