--- a/style.css
+++ b/style.css
@@ -441,3 +441,8 @@ section {
     border-bottom: none;
     padding: 0;
 }
+
+.contact {
+    background: url(assets/img/bg2.jpg);
+    background-size: cover;
+}
