--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,5 @@
+// compress: true
+
 @font-face {
     font-family: 'Montserrat-Medium';
     src: url("assets/fonts/Montserrat-Medium.ttf");
@@ -61,27 +63,22 @@ section {
     font-family: 'Motserrat-SemiBold', sans-serif;
     font-size: 30px;
     text-align: center;
-}
-
-.block-title.white {
-    color: #ffffff;
-}
-
-.block-title:before,
-.block-title:after {
-    content: "";
-    position: absolute;
-    width: 32px;
-    height: 100%;
-    background: url(assets/img/title-work.png) no-repeat center;
-}
-
-.block-title:after {
-    transform: translateX(20px);
-}
-
-.block-title:before {
-    transform: translateX(-52px);
+    &.white {
+        color: #ffffff;
+    }
+    &:before, &:after {
+        content: "";
+        position: absolute;
+        width: 32px;
+        height: 100%;
+        background: url(../img/title-work.png) no-repeat center;
+    }
+    &:after {
+        transform: translateX(20px);
+    }
+    &:before {
+        transform: translateX(-52px);
+    }
 }
 
 .header {
@@ -99,10 +96,9 @@ section {
     color: #ffffff;
     font-family: 'Motserrat-SemiBold', sans-serif;
     font-size: 23px;
-}
-
-.navbar-brand:hover {
-    opacity: .7;
+    &:hover {
+        opacity: .7;
+    }
 }
 
 .nav-item a{
@@ -112,25 +108,22 @@ section {
     padding: 0 15px;
 
     position: relative;
-}
-
-.nav-item a:hover {
-   opacity: .7; 
-}
-
-.nav-item a:before {
-    content: "";
-    position: absolute;
-    left: 15px;
-    bottom: -5px;
-    width: 0%;
-    height: 1px;
-
-    background: #ffe400;
-}
-
-.nav-item a:hover:before {
-    width: 75%;
+    &:before {
+        content: "";
+        position: absolute;
+        left: 15px;
+        bottom: -5px;
+        width: 0%;
+        height: 1px;
+    
+        background: #ffe400;
+    }
+    &:hover:before {
+        width: 75%;
+    }
+    &:hover {
+        opacity: .7; 
+     }
 }
 
 .phone {
@@ -149,32 +142,29 @@ section {
 
 .header-phone {
     text-align: center;
-}
-
-.header-phone a:hover {
-    opacity: .7;
-}
-
-.header-phone a{
-    display: block;
+    a {
+        display: block;
+        &:hover {
+            opacity: .7;
+        }
+    }
 }
 
 .offer {
-    background: url(assets/img/bg1.jpg) no-repeat center;
+    background: url(../img/bg1.jpg) no-repeat center;
     height: 100vh;
     display: flex;
     align-items: center;
 
     position: relative;
-}
-
-.offer p {
-    color: #000000;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-
-    margin: 44px 0;
+    p {
+        color: #000000;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+    
+        margin: 44px 0;
+    }
 }
 
 .main-btn {
@@ -187,68 +177,57 @@ section {
     background: transparent;
     border: none;
     position: relative;
-}
-
-.main-btn:hover {
-    background: #ffe400;
-}
-
-.main-btn:before,
-.main-btn:after {
-    content: "";
-    position: absolute;
-    width: 30%;
-    height: 40%;
-}
-
-.main-btn:before {
-    top: 0;
-    left: 0;
-    border-top: 3px solid #ffe400;
-    border-left: 3px solid #ffe400;
-}
-
-.main-btn:after {
-    bottom: 0;
-    right: 0;
-    border-bottom: 3px solid #ffe400;
-    border-right: 3px solid #ffe400;
-}
-
-.main-btn:hover:before {
-    top: -20px;
-    left: -20px;
-    border-top: 3px solid #000000;
-    border-left: 3px solid #000000;
-    width: 30px;
-    height: 30px;
-}
-
-.main-btn:hover:after {
-    bottom: -20px;
-    right: -20px;
-    border-bottom: 3px solid #000000;
-    border-right: 3px solid #000000;
-    width: 30px;
-    height: 30px;
-}
-
-.main-btn.white {
-    color: #ffffff;
-}
-
-.main-btn.white:hover {
-    color: #000000;
-}
-
-.main-btn.white:hover:before {
-    border-top: 3px solid #ffe400;
-    border-left: 3px solid #ffe400;
-}
-
-.main-btn.white:hover:after {
-    border-bottom: 3px solid #ffe400;
-    border-right: 3px solid #ffe400;
+    &:hover {
+        background: #ffe400;
+        &:before {
+            top: -20px;
+            left: -20px;
+            border-top: 3px solid #000000;
+            border-left: 3px solid #000000;
+            width: 30px;
+            height: 30px;
+        }
+        &:after {
+            bottom: -20px;
+            right: -20px;
+            border-bottom: 3px solid #000000;
+            border-right: 3px solid #000000;
+            width: 30px;
+            height: 30px;
+        }
+    }
+    &:before, &:after {
+        content: "";
+        position: absolute;
+        width: 30%;
+        height: 40%;
+    }
+    &:before {
+        top: 0;
+        left: 0;
+        border-top: 3px solid #ffe400;
+        border-left: 3px solid #ffe400;
+    }
+    &:after {
+        bottom: 0;
+        right: 0;
+        border-bottom: 3px solid #ffe400;
+        border-right: 3px solid #ffe400;
+    }
+    &.white {
+        color: #ffffff;
+        &:hover {
+            color: #000000;
+            &:before {
+                border-top: 3px solid #ffe400;
+                border-left: 3px solid #ffe400;
+            }
+            &:after {
+                border-bottom: 3px solid #ffe400;
+                border-right: 3px solid #ffe400;
+            }
+        }
+    }
 }
 
 .arrow-bottom {
@@ -258,16 +237,15 @@ section {
     text-align: center;
 
     animation: arrowbottom 1.5s infinite;
-}
+    a {
+        display: inline-block;
+        padding: 30px;
+        opacity: .5;
+        &:hover {
+            opacity: 1;
+        }
+    }
 
-.arrow-bottom a{
-    display: inline-block;
-    padding: 30px;
-    opacity: .5;
-}
-
-.arrow-bottom a:hover {
-    opacity: 1;
 }
 
 @keyframes arrowbottom {
@@ -286,21 +264,29 @@ section {
     margin-top: 30px;
     overflow: hidden;
     transition: .2s;
-}
-
-.job-wrap a {
-    display: block;
-}
-
-.job-wrap:hover {
-    transform: scale(1.1);
-    filter: grayscale(100%);
-    opacity: .8;
+    a {
+        display: block;
+        &:hover {
+            transform: scale(1.1);
+            filter: grayscale(100%);
+            opacity: .8;
+        }
+    }
 }
 
 .feedback {
-    background: url(assets/img/bg2.jpg);
+    background: url(../img/bg2.jpg);
     background-size: cover;
+    &-from {
+        color: #ffffff;
+        padding-top: 100px;
+        p {
+            padding: 20px 0px 40px;
+        }
+        h3 {
+            font-family: 'Motserrat-SemiBold', sans-serif;
+        }
+    }
 }
 
 .block-subtitle {
@@ -308,19 +294,6 @@ section {
     font-size: 26px;
     text-align: center;
     margin-top: 20px;
-}
-
-.feedback-from {
-    color: #ffffff;
-    padding-top: 100px;
-}
-
-.feedback-from p {
-    padding: 20px 0px 40px;
-}
-
-.feedback-from h3 {
-    font-family: 'Motserrat-SemiBold', sans-serif;
 }
 
 .form {
@@ -355,7 +328,7 @@ section {
 }
 
 .travel {
-    background: url(assets/img/bg3.png);
+    background: url(../img/bg3.png);
     background-size: cover;
 }
 
@@ -419,41 +392,37 @@ section {
 
     font-size: 28px;
     font-family: 'Motserrat-SemiBold', sans-serif;
-}
-
-.faq-link:hover {
-    opacity: .7;
+    &:hover {
+        opacity: .7;
+    }
 }
 
 .card {
     border: none;
     border-radius: 0;
     border-bottom: 2px solid #ffe400 !important;
-}
+    &:first-child {
+        border-top: 2px solid #ffe400;
+    }
+    &-header {
+        margin-bottom: 0;
+        background-color: #ffffff;
+        border-bottom: none;
+        padding: 0;
+    }
 
-.card:first-child {
-    border-top: 2px solid #ffe400;
-}
-
-.card-header {
-    margin-bottom: 0;
-    background-color: #ffffff;
-    border-bottom: none;
-    padding: 0;
 }
 
 .contact {
-    background: url(assets/img/bg2.jpg);
+    background: url(../img/bg2.jpg);
     background-size: cover;
-}
-
-.contact-form {
-    padding: 40px 0;
-}
-
-.contact-form button {
-    display: block;
-    margin: 0 auto;
+    &-form {
+        padding: 40px 0;
+        button {
+        display: block;
+        margin: 0 auto;
+        }
+    }
 }
 
 .textarea {
@@ -465,29 +434,23 @@ section {
     padding-top: 60px;
     text-align: center;
     color: #ffffff;
-}
-
-.social h3 {
-    font-family: 'Motserrat-SemiBold', sans-serif;
-}
-
-.social-icons {
-    justify-content: center;
-    display: flex;
-    padding-top: 40px;
-}
-
-.social-icons svg {
-    margin: 0 15px;
-    width: 35px;
-    height: 35px;
-}
-
-.social__icon {
-    fill: #5a5a5a;
-    
-}
-
-.social__icon:hover {
-    opacity: .5;
+    h3 {
+        font-family: 'Motserrat-SemiBold', sans-serif;
+    }
+    &-icons {
+        justify-content: center;
+        display: flex;
+        padding-top: 40px;
+        svg {
+            margin: 0 15px;
+            width: 35px;
+            height: 35px;
+        }
+    }
+    &__icon {
+        fill: #5a5a5a;
+        &:hover {
+            opacity: .5;
+        }
+    }
 }
