--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -71,7 +71,7 @@ section {
         position: absolute;
         width: 32px;
         height: 100%;
-        background: url(../img/title-work.png) no-repeat center;
+        background: url(../img/title-work1.png) no-repeat center;
     }
     &:after {
         transform: translateX(20px);
@@ -96,9 +96,15 @@ section {
     color: #ffffff;
     font-family: 'Motserrat-SemiBold', sans-serif;
     font-size: 23px;
+    span {
+        color: #ffe400;
+        font-size: 18px;
+        letter-spacing: 0.1em;
+    }
     &:hover {
         opacity: .7;
     }
+    
 }
 
 .nav-item a{
@@ -135,7 +141,6 @@ section {
 .callback {
     color: #ffe400 !important;
     font-size: 12px;
-    letter-spacing: 0.2em;
     font-weight: 400;
     border-bottom: 1px dashed #ffe400;
 }
@@ -325,59 +330,6 @@ section {
     position: absolute;
     bottom: -100px;
     right: 15px;
-}
-
-.travel {
-    background: url(../img/bg3.png);
-    background-size: cover;
-}
-
-.slider {
-    max-width: 660px;
-    margin: 40px auto 0px;
-}
-
-.carousel-control-prev img {
-    transform: rotate(90deg);
-}
-
-.carousel-control-prev {
-    width: 150px;
-    height: 28px;
-    left: -25%;
-    top: 50%;
-}
-
-.carousel-control-next img{
-    transform: rotate(-90deg);
-}
-
-.carousel-control-next {
-    width: 150px;
-    height: 28px;
-    right: -25%;
-    top: 50%;
-}
-
-.carousel-item .clr-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-}
-
-.baw {
-    position: relative;
-    opacity: 1;
-    z-index: 2;
-    transition: .2s;
-
-    filter: grayscale(100%);
-}
-
-.slider:hover .baw {
-    opacity: 0;
-    visibility: hidden;
 }
 
 .accordion {
