--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,58 +317,6 @@ section {
   right: 15px;
 }
 
-.travel {
-  background: url(../img/bg3.png);
-  background-size: cover;
-}
-
-.slider {
-  max-width: 660px;
-  margin: 40px auto 0px;
-}
-
-.carousel-control-prev img {
-  transform: rotate(90deg);
-}
-
-.carousel-control-prev {
-  width: 150px;
-  height: 28px;
-  left: -25%;
-  top: 50%;
-}
-
-.carousel-control-next img {
-  transform: rotate(-90deg);
-}
-
-.carousel-control-next {
-  width: 150px;
-  height: 28px;
-  right: -25%;
-  top: 50%;
-}
-
-.carousel-item .clr-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-}
-
-.baw {
-  position: relative;
-  opacity: 1;
-  z-index: 2;
-  transition: 0.2s;
-  filter: grayscale(100%);
-}
-
-.slider:hover .baw {
-  opacity: 0;
-  visibility: hidden;
-}
-
 .accordion {
   margin-top: 50px;
 }
@@ -399,7 +347,35 @@ section {
   border-bottom: none;
   padding: 0;
 }
+.card-body {
+  font-style: italic;
+  font-family: "Motserrat-SemiBold", sans-serif;
+  text-align: center;
+}
 
+.diploma {
+  width: auto;
+  height: 150px;
+  padding: 20px auto;
+  border: 1px dashed #5a5a5a;
+}
+
+.skill-icon {
+  width: 80px;
+  height: 80px;
+  margin: 20px 25px;
+  fill: #f80d7a;
+  animation: as 2.5s infinite;
+}
+
+@keyframes as {
+  40% {
+    fill: #ffe400;
+  }
+  60% {
+    fill: #000000;
+  }
+}
 .contact {
   background: url(../img/bg2.jpg);
   background-size: cover;
