--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -265,7 +265,7 @@ section {
     }
 }
 
-.job-wrap {
+.travel-wrap {
     margin-top: 30px;
     overflow: hidden;
     transition: .2s;
@@ -382,19 +382,21 @@ section {
     width: 80px;
     height: 80px;
     margin: 20px 25px;
-
-    fill: #f80d7a;
-    
-    animation: as 2.5s infinite;
+    fill: #5a5a5a;
+   
+    animation: as 5s infinite;
 }
 
 
 
 @keyframes as {
-    40% {
+    10% {
         fill: #ffe400;
     }
-    60% {
+    15% {
+        fill: #e1e782;
+    }
+    10% {
         fill: #000000;
     }
 }
@@ -440,3 +442,152 @@ section {
         }
     }
 }
+
+
+/* import*/
+$black: #2b2a2c;
+$gray: #717072;
+$gray-light: #8d8d8e;
+$white: #ffffffff;
+
+.modal__content {
+    padding: 5rem 1rem;
+}
+.modal__title {
+    font-size: 3rem;
+    text-transform: uppercase;
+    color:  $black;
+    font-weight: 700;
+
+    text-align: center;
+
+    margin-bottom: 3.6rem;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-right{
+    text-align: right;
+}
+.text-left {
+    text-align: left;
+}
+
+.img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+.hide {
+    display: none;
+}
+
+.timeline {
+    margin: 4.2rem auto;
+    width: 100%;
+    max-width: 768px;
+
+    display: flex;
+    position: relative;
+
+    &:before {
+        content: "";
+        display: block;
+        width: 1px;
+        height: 100%;
+        background-color: $black;
+
+        position: absolute;
+        top: 0;
+        left: 50%;
+        z-index: 1;
+    }
+}
+
+.timeline__col {
+    width: 50%;
+
+    &--left {
+        text-align: right;
+        padding-right: 3.2rem;
+    }
+
+    &--right {
+        padding-left: 3.2rem;
+
+    }
+
+}
+.timeline__title {
+    margin-bottom: 2.6rem;
+
+    font-size: 1.2rem;
+    color: $black;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.timeline__item {
+    margin-bottom: 2.6rem;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+.timeline__date {
+    display: block;
+    text-decoration: underline;
+    font-size: 0.94rem;
+    color: $black;
+
+    margin-bottom: 0.8rem;
+}
+.tmeline__suptitle {
+    font-size: 1.06rem;
+    color: $black;
+    font-weight: 700;
+}
+.timeline__position {
+    font-size: 0.94rem;
+    color: $black;
+    font-style: italic;
+}
+.timeline__text {
+    font-size: 0.8rem;
+    line-height: 1.5rem;
+    color: $gray;
+    font-weight: 300;
+
+    margin-top: 0.8rem;
+}
+
+.progress-bar {
+    margin-bottom: 2.6rem;
+}
+.progress-bar__item {
+    display: flex;
+    align-items: center;
+
+    margin-bottom: .3rem;
+    justify-content: space-between;
+}
+progress-bar__title {
+    font-size: .94rem;
+    font-weight: 300;
+}
+.progress-bar__right {
+    padding-right: 4.2rem;
+}
+.progress-bar__bar {
+    width: 139px;
+    height: 6px;
+    background-color: #efefef;
+}
+.progress-bar__progress {
+    height: 100%;
+    background-color: $gray;
+
+    transition: width .2s linear;
+}
+
