--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -279,6 +279,10 @@ section {
     }
 }
 
+.cv {
+    background: #fafafa;
+}
+
 .feedback {
     background: url(../img/bg2.jpg);
     background-size: cover;
@@ -377,6 +381,13 @@ section {
     border: 1px dashed #5a5a5a;
 }
 
+.web {
+    width: auto;
+    height: 350px;
+    padding: 20px auto;
+    border: 1px solid #5a5a5a;
+}
+
 .skill-icon {
     
     width: 80px;
@@ -384,19 +395,19 @@ section {
     margin: 20px 25px;
     fill: #5a5a5a;
    
-    animation: as 5s infinite;
+    animation: as 2.5s infinite;
 }
 
 
 
 @keyframes as {
-    10% {
+    50% {
         fill: #ffe400;
     }
     15% {
         fill: #e1e782;
     }
-    10% {
+    50% {
         fill: #000000;
     }
 }
@@ -562,31 +573,32 @@ $white: #ffffffff;
     margin-top: 0.8rem;
 }
 
-.progress-bar {
+.progress--bar {
     margin-bottom: 2.6rem;
 }
-.progress-bar__item {
+.progress--bar__item {
     display: flex;
     align-items: center;
 
     margin-bottom: .3rem;
     justify-content: space-between;
 }
-progress-bar__title {
+.progress--bar__title {
     font-size: .94rem;
     font-weight: 300;
 }
-.progress-bar__right {
+.progress--bar__right {
     padding-right: 4.2rem;
 }
-.progress-bar__bar {
+.progress--bar__bar {
     width: 139px;
     height: 6px;
-    background-color: #efefef;
+    background-color: #ffe400;
+    opacity: .8;
 }
-.progress-bar__progress {
+.progress--bar__progress {
     height: 100%;
-    background-color: $gray;
+    background-color: #313131;
 
     transition: width .2s linear;
 }
