--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,556 +50,20 @@ section {
     padding: 100px 0;
 }
 
-.title {
-    color: #313131;
-    font-family: 'Motserrat-SemiBold', sans-serif;
-    font-size: 50px;
-    font-weight: 700;
-}
-
-.block-title {
-    position: relative;
-    color: #313131;
-    font-family: 'Motserrat-SemiBold', sans-serif;
-    font-size: 30px;
-    text-align: center;
-    &.white {
-        color: #ffffff;
-    }
-    &:before, &:after {
-        content: "";
-        position: absolute;
-        width: 32px;
-        height: 100%;
-        background: url(../img/title-work1.png) no-repeat center;
-    }
-    &:after {
-        transform: translateX(20px);
-    }
-    &:before {
-        transform: translateX(-52px);
-    }
-}
-
-.header {
-    box-shadow: 0 2px 20px #5a5a5a;
-    background-color: #5a5a5a;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
-}
-
-.navbar-brand {
-    color: #ffffff;
-    font-family: 'Motserrat-SemiBold', sans-serif;
-    font-size: 23px;
-    span {
-        color: #ffe400;
-        font-size: 18px;
-        letter-spacing: 0.1em;
-    }
-    &:hover {
-        opacity: .7;
-    }
-    
-}
-
-.nav-item a{
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 0 15px;
-
-    position: relative;
-    &:before {
-        content: "";
-        position: absolute;
-        left: 15px;
-        bottom: -5px;
-        width: 0%;
-        height: 1px;
-    
-        background: #ffe400;
-    }
-    &:hover:before {
-        width: 75%;
-    }
-    &:hover {
-        opacity: .7; 
-     }
-}
-
-.phone {
-    color: #ffffff !important;
-    font-family: 'Motserrat-SemiBold', sans-serif;
-    font-size: 18px;
-}
-
-.callback {
-    color: #ffe400 !important;
-    font-size: 12px;
-    font-weight: 400;
-    border-bottom: 1px dashed #ffe400;
-}
-
-.header-phone {
-    text-align: center;
-    a {
-        display: block;
-        &:hover {
-            opacity: .7;
-        }
-    }
-}
-
-.offer {
-    background: url(../img/bg1.jpg) no-repeat center;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-
-    position: relative;
-    p {
-        color: #000000;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 30px;
-    
-        margin: 44px 0;
-    }
-}
-
-.main-btn {
-    color: #000000;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 50px;
-    width: 205px;
-
-    background: transparent;
-    border: none;
-    position: relative;
-    &:hover {
-        background: #ffe400;
-        &:before {
-            top: -20px;
-            left: -20px;
-            border-top: 3px solid #000000;
-            border-left: 3px solid #000000;
-            width: 30px;
-            height: 30px;
-        }
-        &:after {
-            bottom: -20px;
-            right: -20px;
-            border-bottom: 3px solid #000000;
-            border-right: 3px solid #000000;
-            width: 30px;
-            height: 30px;
-        }
-    }
-    &:before, &:after {
-        content: "";
-        position: absolute;
-        width: 30%;
-        height: 40%;
-    }
-    &:before {
-        top: 0;
-        left: 0;
-        border-top: 3px solid #ffe400;
-        border-left: 3px solid #ffe400;
-    }
-    &:after {
-        bottom: 0;
-        right: 0;
-        border-bottom: 3px solid #ffe400;
-        border-right: 3px solid #ffe400;
-    }
-    &.white {
-        color: #ffffff;
-        &:hover {
-            color: #000000;
-            &:before {
-                border-top: 3px solid #ffe400;
-                border-left: 3px solid #ffe400;
-            }
-            &:after {
-                border-bottom: 3px solid #ffe400;
-                border-right: 3px solid #ffe400;
-            }
-        }
-    }
-}
-
-.arrow-bottom {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    text-align: center;
-
-    animation: arrowbottom 1.5s infinite;
-    a {
-        display: inline-block;
-        padding: 30px;
-        opacity: .5;
-        &:hover {
-            opacity: 1;
-        }
-    }
-
-}
-
-@keyframes arrowbottom {
-    0% {
-        bottom: 40px;
-    }
-    50% {
-        bottom: 20px;
-    }
-    100% {
-        bottom: 40px;
-    }
-}
-
-.travel-wrap {
-    margin-top: 30px;
-    overflow: hidden;
-    transition: .2s;
-    a {
-        display: block;
-        &:hover {
-            transform: scale(1.1);
-            filter: grayscale(100%);
-            opacity: .8;
-        }
-    }
-}
-
-.cv {
-    background: #fafafa;
-}
-
-.feedback {
-    background: url(../img/bg2.jpg);
-    background-size: cover;
-    &-from {
-        color: #ffffff;
-        padding-top: 100px;
-        p {
-            padding: 20px 0px 40px;
-        }
-        h3 {
-            font-family: 'Motserrat-SemiBold', sans-serif;
-        }
-    }
-}
-
-.block-subtitle {
-    color: #ffffff;
-    font-size: 26px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.form {
-    color: #dcdcdc;
-    font-size: 16px;
-}
-
-.input {
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #ffe400;
-    color: #ffffff;
-    width: 100%;
-
-    margin-bottom: 30px;
-    padding: 5px 10px;
-}
-
-.input:hover,
-.input:focus {
-    opacity: .7;
-}
-
-.feedback .container {
-    position: relative;
-}
-
-.photo {
-    position: absolute;
-    bottom: -100px;
-    right: 15px;
-}
-
-.accordion {
-    margin-top: 50px;
-}
-
-.faq-link {
-    text-align: center;
-    display: block;
-    padding: 30px;
-    color: #313131 !important;
-
-    font-size: 28px;
-    font-family: 'Motserrat-SemiBold', sans-serif;
-    &:hover {
-        opacity: .7;
-    }
-}
-
-.card {
-    border: none;
-    border-radius: 0;
-    border-bottom: 2px solid #ffe400 !important;
-    &:first-child {
-        border-top: 2px solid #ffe400;
-    }
-    &-header {
-        margin-bottom: 0;
-        background-color: #ffffff;
-        border-bottom: none;
-        padding: 0;
-    }
-    &-body {
-        font-style: italic;
-        font-family: 'Motserrat-SemiBold', sans-serif;
-        text-align:center;
-    }
-
-}
-
-.diploma {
-    width: auto;
-    height: 150px;
-    padding: 20px auto;
-    border: 1px dashed #5a5a5a;
-}
-
-.web {
-    width: auto;
-    height: 350px;
-    padding: 20px auto;
-    border: 1px solid #5a5a5a;
-}
-
-.skill-icon {
-    
-    width: 80px;
-    height: 80px;
-    margin: 20px 25px;
-    fill: #5a5a5a;
-   
-    animation: as 2.5s infinite;
-}
-
-
-
-@keyframes as {
-    50% {
-        fill: #ffe400;
-    }
-    15% {
-        fill: #e1e782;
-    }
-    50% {
-        fill: #000000;
-    }
-}
-
-.contact {
-    background: url(../img/bg2.jpg);
-    background-size: cover;
-    &-form {
-        padding: 40px 0;
-        button {
-        display: block;
-        margin: 0 auto;
-        }
-    }
-}
-
-.textarea {
-    resize: none;
-    height: 165px;
-}
-
-.social {
-    padding-top: 60px;
-    text-align: center;
-    color: #ffffff;
-    h3 {
-        font-family: 'Motserrat-SemiBold', sans-serif;
-    }
-    &-icons {
-        justify-content: center;
-        display: flex;
-        padding-top: 40px;
-        svg {
-            margin: 0 15px;
-            width: 35px;
-            height: 35px;
-        }
-    }
-    &__icon {
-        fill: #5a5a5a;
-        &:hover {
-            opacity: .5;
-        }
-    }
-}
-
-
-/* import*/
-$black: #2b2a2c;
-$gray: #717072;
-$gray-light: #8d8d8e;
-$white: #ffffffff;
-
-.modal__content {
-    padding: 5rem 1rem;
-}
-.modal__title {
-    font-size: 3rem;
-    text-transform: uppercase;
-    color:  $black;
-    font-weight: 700;
-
-    text-align: center;
-
-    margin-bottom: 3.6rem;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.text-right{
-    text-align: right;
-}
-.text-left {
-    text-align: left;
-}
-
-.img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-.hide {
-    display: none;
-}
-
-.timeline {
-    margin: 4.2rem auto;
-    width: 100%;
-    max-width: 768px;
-
-    display: flex;
-    position: relative;
-
-    &:before {
-        content: "";
-        display: block;
-        width: 1px;
-        height: 100%;
-        background-color: $black;
-
-        position: absolute;
-        top: 0;
-        left: 50%;
-        z-index: 1;
-    }
-}
-
-.timeline__col {
-    width: 50%;
-
-    &--left {
-        text-align: right;
-        padding-right: 3.2rem;
-    }
-
-    &--right {
-        padding-left: 3.2rem;
-
-    }
-
-}
-.timeline__title {
-    margin-bottom: 2.6rem;
-
-    font-size: 1.2rem;
-    color: $black;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-.timeline__item {
-    margin-bottom: 2.6rem;
-
-    &:last-child {
-        margin-bottom: 0;
-    }
-}
-.timeline__date {
-    display: block;
-    text-decoration: underline;
-    font-size: 0.94rem;
-    color: $black;
-
-    margin-bottom: 0.8rem;
-}
-.tmeline__suptitle {
-    font-size: 1.06rem;
-    color: $black;
-    font-weight: 700;
-}
-.timeline__position {
-    font-size: 0.94rem;
-    color: $black;
-    font-style: italic;
-}
-.timeline__text {
-    font-size: 0.8rem;
-    line-height: 1.5rem;
-    color: $gray;
-    font-weight: 300;
-
-    margin-top: 0.8rem;
-}
-
-.progress--bar {
-    margin-bottom: 2.6rem;
-}
-.progress--bar__item {
-    display: flex;
-    align-items: center;
-
-    margin-bottom: .3rem;
-    justify-content: space-between;
-}
-.progress--bar__title {
-    font-size: .94rem;
-    font-weight: 300;
-}
-.progress--bar__right {
-    padding-right: 4.2rem;
-}
-.progress--bar__bar {
-    width: 139px;
-    height: 6px;
-    background-color: #ffe400;
-    opacity: .8;
-}
-.progress--bar__progress {
-    height: 100%;
-    background-color: #313131;
-
-    transition: width .2s linear;
-}
-
+@import "blocks/title.scss";
+@import "blocks/header.scss";
+@import "blocks/navbar-brand.scss";
+@import "blocks/nav-item.scss";
+@import "blocks/navcall.scss";
+@import "blocks/offer.scss";
+@import "blocks/main-btn.scss";
+@import "blocks/arrow-bottom.scss";
+@import "blocks/travel.scss";
+@import "blocks/feedback.scss";
+@import "blocks/block-subtitle.scss";
+@import "blocks/form.scss";
+@import "blocks/input.scss";
+@import "blocks/faq.scss";
+@import "blocks/contact.scss";
+@import "blocks/cv.scss";
+@import "blocks/works.scss";
