--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,3 +579,40 @@ section {
   align-items: center;
   position: relative;
 }
+.works-wrap {
+  display: block;
+  margin-top: 30px;
+  overflow: hidden;
+  transition: 0.2s;
+  border-radius: 5px;
+  border: 1px solid #ffee4e;
+  animation: borderflash 1.5s infinite;
+}
+.works-wrap:hover {
+  box-shadow: 0px 5px 5px #615f5f;
+  transform: translateX(-2px);
+}
+.works-wrap a {
+  display: block;
+  filter: grayscale(100%);
+}
+.works-wrap a:hover {
+  transform: scale(1.05);
+  filter: none;
+  opacity: 1;
+}
+
+@keyframes borderflash {
+  0% {
+    border: 1px solid rgba(255, 237, 77, 0.027);
+    transition: 0.2s;
+  }
+  50% {
+    border: 5px solid #ffed4d;
+    transition: 0.2s;
+  }
+  100% {
+    border: 1px solid rgba(255, 237, 77, 0.027);
+    transition: 0.2s;
+  }
+}
