--- a/assets/scss/blocks/works.scss
+++ b/assets/scss/blocks/works.scss
@@ -5,5 +5,46 @@
     align-items: center;
 
     position: relative;
+
     
+    &-wrap {
+        display: block;
+        margin-top: 30px;
+        overflow: hidden;
+        transition: .2s;
+
+        border-radius: 5px;
+        border: 1px solid #ffee4e;
+
+        animation: borderflash 1.5s infinite;
+        &:hover {
+            box-shadow: 0px 5px 5px #615f5f;
+            transform: translateX(-2px);
+        }
+        a {
+            display: block;
+            filter: grayscale(100%);
+            &:hover {
+                transform: scale(1.05);
+                filter: none;
+                opacity: 1;
+                
+            }
+        }
+    }
+}
+
+@keyframes borderflash {
+    0% {
+        border: 0px solid hsla(54, 100%, 65%, 0.027);
+        transition: .2s;
+    }
+    50% {
+        border: 3px solid hsla(54, 100%, 65%, 0.541);
+        transition: .2s;
+    }
+    100% {
+        border: 0px solid hsla(54, 100%, 65%, 0.027);
+        transition: .2s;
+    }
 }
