--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,31 @@ section {
   transform: translateX(-52px);
 }
 
+@media (max-width: 990px) {
+  .title {
+    font-size: 35px;
+  }
+}
+@media (max-width: 760px) {
+  .block-title {
+    margin-top: 0px;
+  }
+
+  .title {
+    font-size: 25px;
+  }
+}
+@media (max-width: 414px) {
+  .title {
+    font-size: 26px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 414px) {
+  .block-title {
+    font-size: 20px;
+  }
+}
 .header {
   box-shadow: 0 2px 20px #5a5a5a;
   background-color: #5a5a5a;
@@ -162,10 +187,22 @@ section {
   margin: 44px 0;
 }
 
+@media (max-width: 760px) {
+  .offer p {
+    font-size: 16px;
+    margin: 34px 20px;
+  }
+}
+@media (max-width: 414px) {
+  .offer p {
+    margin: 144px 40px;
+    font-size: 20px;
+  }
+}
 .main-btn {
   color: #000000;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 50px;
   width: 205px;
   background: transparent;
@@ -224,6 +261,24 @@ section {
   border-right: 3px solid #ffe400;
 }
 
+@media (max-width: 990px) {
+  .main-btn {
+    margin: 0 40px;
+  }
+}
+@media (max-width: 760px) {
+  .main-btn {
+    margin-top: 5px;
+  }
+}
+@media (max-width: 520px) {
+  .main-btn {
+    font-size: 14px;
+    line-height: 40px;
+    width: 150px;
+    letter-spacing: 0.03em;
+  }
+}
 .arrow-bottom {
   position: absolute;
   bottom: 20px;
@@ -249,6 +304,11 @@ section {
   }
   100% {
     bottom: 40px;
+  }
+}
+@media (max-width: 990px) {
+  .arrow-bottom a {
+    width: 150px;
   }
 }
 .travel-wrap {
@@ -290,13 +350,70 @@ section {
   right: 15px;
 }
 
+@media (max-width: 990px) {
+  .photo {
+    width: 350px;
+    right: 0px;
+  }
+
+  .feedback-from {
+    padding-top: 40px;
+  }
+  .feedback-from input {
+    width: 50%;
+  }
+}
+@media (max-width: 760px) {
+  .photo {
+    width: 280px;
+  }
+}
+@media (max-width: 520px) {
+  .photo {
+    width: 230px;
+  }
+
+  .feedback-from {
+    padding-top: 50px;
+  }
+  .feedback-from p {
+    padding: 10px 0px 20px;
+    font-size: 14px;
+  }
+  .feedback-from h3 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 414px) {
+  .photo {
+    width: 190px;
+  }
+
+  .feedback-from {
+    padding-top: 30px;
+  }
+  .feedback-from p {
+    padding: 10px 0px 20px;
+    font-size: 14px;
+    width: 80%;
+  }
+  .feedback-from h3 {
+    font-size: 20px;
+  }
+}
 .block-subtitle {
   color: #ffffff;
-  font-size: 26px;
+  font-size: 20px;
   text-align: center;
   margin-top: 20px;
 }
 
+@media (max-width: 414px) {
+  .block-subtitle {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+}
 .form {
   color: #dcdcdc;
   font-size: 16px;
@@ -386,6 +503,30 @@ section {
     fill: #000000;
   }
 }
+@media (max-width: 990px) {
+  .diploma {
+    margin: 5px 3px;
+  }
+}
+@media (max-width: 414px) {
+  .accordion {
+    margin-top: 30px;
+  }
+
+  .faq-link {
+    padding: 10px;
+    font-size: 18px;
+  }
+
+  .card-body {
+    padding: 5px 10px 20px 10px;
+    font-size: 14px;
+  }
+
+  .faq {
+    padding-bottom: 10px;
+  }
+}
 .contact {
   background: url(../img/bg2.jpg);
   background-size: cover;
@@ -430,6 +571,9 @@ section {
 
 .cv {
   background: #fafafa;
+}
+.cv a {
+  margin-top: 40px;
 }
 
 .modal__content {
@@ -573,6 +717,78 @@ section {
   transition: width 0.2s linear;
 }
 
+@media (max-width: 760px) {
+  .timeline__date {
+    font-size: 0.88rem;
+  }
+
+  .progress--bar__title {
+    font-size: 0.8rem;
+  }
+
+  .progress--bar__bar {
+    width: 80px;
+  }
+
+  .timeline__col--left {
+    text-align: right;
+    padding-right: 2.2rem;
+  }
+  .timeline__col--right {
+    padding-left: 2.2rem;
+  }
+
+  .timeline__title {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 520px) {
+  .tmeline__suptitle {
+    font-size: 0.8rem;
+  }
+
+  .timeline__position {
+    font-size: 0.7rem;
+  }
+
+  .timeline__title {
+    margin-bottom: 1.5rem;
+  }
+
+  .timeline__date {
+    font-size: 0.66rem;
+  }
+
+  .timeline__text {
+    font-size: 0.6rem;
+    line-height: 1rem;
+  }
+
+  .timeline__col--left {
+    text-align: right;
+    padding-right: 1.8rem;
+  }
+  .timeline__col--right {
+    padding-left: 1.8rem;
+  }
+
+  .progress--bar__title {
+    font-size: 0.6rem;
+  }
+
+  .progress--bar__right {
+    padding-right: 2.2rem;
+  }
+
+  .progress--bar__bar {
+    width: 60px;
+  }
+
+  .timeline__text .diploma {
+    width: 50%;
+    height: 50%;
+  }
+}
 .works {
   background: url(../img/bg3.jpg) no-repeat center;
   height: 100vh;
@@ -581,11 +797,12 @@ section {
 }
 .works-wrap {
   display: block;
-  margin-top: 30px;
+  margin: 40px 30px;
   overflow: hidden;
   transition: 0.2s;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid #ffee4e;
+  position: absolute;
   animation: borderflash 1.5s infinite;
 }
 .works-wrap:hover {
@@ -604,15 +821,51 @@ section {
 
 @keyframes borderflash {
   0% {
-    border: 1px solid rgba(255, 237, 77, 0.027);
+    border: 0px solid rgba(255, 237, 77, 0.027);
     transition: 0.2s;
   }
   50% {
-    border: 5px solid #ffed4d;
+    border: 3px solid rgba(255, 237, 77, 0.541);
     transition: 0.2s;
   }
   100% {
-    border: 1px solid rgba(255, 237, 77, 0.027);
+    border: 0px solid rgba(255, 237, 77, 0.027);
     transition: 0.2s;
+  }
+}
+@media (max-width: 990px) {
+  .works-wrap {
+    width: 150px;
+    position: relative;
+    margin: 60px 5px;
+  }
+
+  div.col-lg-3 {
+    width: 25%;
+  }
+}
+@media (max-width: 760px) {
+  .works {
+    height: 70vh;
+  }
+  .works-wrap {
+    width: 120px;
+    margin: 40px 5px;
+  }
+}
+@media (max-width: 520px) {
+  .works-wrap {
+    width: 90px;
+    margin: 50px auto;
+  }
+}
+@media (max-width: 414px) {
+  .works-wrap {
+    width: 140px;
+    margin: 20px auto;
+  }
+
+  div.col-lg-3 {
+    width: 50%;
   }
 }
