--- a/assets/scss/blocks/feedback.scss
+++ b/assets/scss/blocks/feedback.scss
@@ -24,3 +24,63 @@
     bottom: -100px;
     right: 15px;
 }
+
+@media (max-width: 990px) {
+    .photo {
+        width: 350px;
+        right: 0px;
+    }
+
+    .feedback {
+        
+        &-from {
+            input {
+                width: 50%;
+            }
+            
+            padding-top: 40px;
+        }
+
+    }
+}
+@media (max-width: 760px) {
+    .photo {
+        width: 280px;
+    }
+}
+@media (max-width: 520px) {
+    .photo {
+        width: 230px;
+    }
+    .feedback {
+        &-from {
+            padding-top: 50px;
+            p {
+                padding: 10px 0px 20px;
+                font-size: 14px;
+            }
+            h3 {
+                font-size: 20px;
+            }
+        }
+    }
+}
+@media (max-width: 414px) {
+    .photo {
+        width: 190px;
+    }
+    .feedback {
+        &-from {
+           
+            padding-top: 30px;
+            p {
+                padding: 10px 0px 20px;
+                font-size: 14px; 
+                width: 80%;
+            }
+            h3 {
+                font-size: 20px;
+            }
+        }
+    }
+}
