--- a/assets/scss/blocks/nav-item.scss
+++ b/assets/scss/blocks/nav-item.scss
@@ -1,13 +1,15 @@
 // main: ../style.scss
 
 
-.nav-item a{
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 0 15px;
+.nav-item 
+    a {
+        color: #ffffff;
+        font-size: 16px;
+        font-weight: 400;
+        padding: 0 15px;
 
-    position: relative;
+        position: relative;
+        
     &:before {
         content: "";
         position: absolute;
@@ -23,5 +25,8 @@
     }
     &:hover {
         opacity: .7; 
-     }
+    }
+}
+@media (max-width: 414px) {
+    
 }
