--- a/assets/scss/blocks/title.scss
+++ b/assets/scss/blocks/title.scss
@@ -29,3 +29,30 @@
         transform: translateX(-52px);
     }
 }
+
+@media (max-width: 990px) {
+    .title {
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 760px) {
+    .block-title {
+        margin-top: 0px;
+    }
+    .title {
+        font-size: 25px;
+    }
+}
+@media (max-width: 414px) {
+    .title {
+        font-size: 26px;
+        line-height: 1.2;
+        
+    }
+}
+@media (max-width: 414px) {
+    .block-title {
+        font-size: 20px;
+    }
+}
