--- a/assets/scss/blocks/works.scss
+++ b/assets/scss/blocks/works.scss
@@ -9,12 +9,14 @@
     
     &-wrap {
         display: block;
-        margin-top: 30px;
+        margin: 40px 30px;
         overflow: hidden;
         transition: .2s;
 
-        border-radius: 5px;
+        border-radius: 10px;
         border: 1px solid #ffee4e;
+
+        position: absolute;
 
         animation: borderflash 1.5s infinite;
         &:hover {
@@ -46,5 +48,48 @@
     100% {
         border: 0px solid hsla(54, 100%, 65%, 0.027);
         transition: .2s;
+    }
+}
+
+@media (max-width: 990px) {
+    .works {
+        
+        &-wrap {
+            width: 150px;
+            position: relative;
+            margin: 60px 5px;
+        }
+    }
+    div.col-lg-3 {
+        width: 25%;
+    }
+}
+
+@media (max-width: 760px) {
+    .works {
+        height: 70vh;
+        &-wrap {
+            width: 120px;
+            margin: 40px 5px;
+        }
+    }
+}
+@media (max-width: 520px) {
+    .works {
+        &-wrap {
+            width: 90px;
+            margin: 50px auto;
+        }
+    }
+}
+@media (max-width: 414px) {
+    .works {
+        &-wrap {
+            width: 140px;
+            margin: 20px auto;
+        }
+    }
+    div.col-lg-3 {
+        width: 50%;
     }
 }
