--- a/assets/scss/blocks/block-subtitle.scss
+++ b/assets/scss/blocks/block-subtitle.scss
@@ -13,3 +13,15 @@
         margin-top: 10px;
     }
 }
+@media (max-width: 320px) {
+    .title {
+        font-size: 18px; 
+    }
+    .block-subtitle {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+    .block-subtitle {
+        font-size: 12px;
+    }
+}
