--- a/assets/scss/blocks/main-btn.scss
+++ b/assets/scss/blocks/main-btn.scss
@@ -82,3 +82,13 @@
         letter-spacing: 0.03em;
     }
 }
+@media (max-width: 375px) {
+    .main-btn {
+        margin: 0 20px;
+    }
+    
+}
+@media (max-width: 320px) {
+   
+    
+}
