--- a/assets/scss/blocks/navbar-brand.scss
+++ b/assets/scss/blocks/navbar-brand.scss
@@ -15,3 +15,20 @@
     }
     
 }
+@media (max-width: 375px) {
+    .navbar-brand {
+        font-size: 20px;
+        span {
+            font-size: 16px;
+        }
+    } 
+}
+@media (max-width: 320px) {
+    .navbar-brand {
+        font-size: 16px;
+        span {
+            font-size: 14px;
+        }
+    } 
+    
+}
