--- a/assets/scss/blocks/title.scss
+++ b/assets/scss/blocks/title.scss
@@ -56,3 +56,20 @@
         font-size: 20px;
     }
 }
+@media (max-width: 320px) {
+    .title {
+        font-size: 18px; 
+    }
+    .block-title {
+        &:before, &:after {
+            width: 32px;
+            height: 100%;
+        }
+        &:after {
+            transform: translateX(10px);
+        }
+        &:before {
+            transform: translateX(-42px);
+        }
+    }
+}
